<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nav_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sozlamalar"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/hammasi" />

    <CheckBox
        android:id="@+id/onlyEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/ingilizchasi" />

  <CheckBox
        android:id="@+id/onlyUzbek"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/uzbekchasi" />

</LinearLayout>
