<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ViewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/nav_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ViewActivity">

        <ImageView
            android:id="@+id/exitIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="30"
            android:text="@string/lug_atlarim"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/view_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="1dp">

                <TextView
                    android:id="@+id/textEnglish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/btnSpeak"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/ic_volume_max" />

                <ImageView
                    android:id="@+id/btnEdit"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:clickable="true"
                    android:contentDescription="@string/speak"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_edit"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/textPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/part"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/textUzbek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/uzbek"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="280dp"
                android:layout_height="0.001dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="#EEEEEE" />

            <TextView
                android:id="@+id/textExample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="14dp"
                android:text="@string/example"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="italic" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>