<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/nav_bg"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/exitIcon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/item_b"
            android:drawableStart="@drawable/ic_search_blue"
            android:drawablePadding="6dp"
            android:hint="@string/search"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/exitIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/exitIcon"
            app:layout_constraintTop_toTopOf="@+id/exitIcon"
            tools:ignore="Autofill,TextFields" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/app_name"
        android:elevation="10dp"
        android:src="@drawable/ic_settings"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="6dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_navigation"
        tools:listitem="@layout/item_word" />

    <TextView
        android:id="@+id/recyclerViewNoResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/natiajalar_topilmadi"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_navigation"
        tools:listitem="@layout/item_word" />


</androidx.constraintlayout.widget.ConstraintLayout>